--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,111 +5,33 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    tools:context=".MainActivity">
+    android:padding="10dp"
+    tools:context=".MainActivity"
 
-    <EditText
-        android:id="@+id/tvNum2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.761"
-        tools:text="numero2"
-        android:autofillHints="" />
+    >
 
-    <EditText
-        android:id="@+id/tvNum1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="16dp"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.54"
-        tools:text="numero1" />
 
-    <RadioGroup
-        android:id="@+id/radiogroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-
-        app:layout_constraintEnd_toEndOf="@+id/tvResultado"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNum2">
-
-        <RadioButton
-            android:id="@+id/radioButtonSumar"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btnEjemplo1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="@string/Ejercicio1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            android:text="@string/sumar" />
-
-        <RadioButton
-            android:id="@+id/radioButtonRestar"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btnPizzeria"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-
-            android:text="@string/restar" />
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/tvResultado"
-        android:layout_width="101dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:autoSizeMinTextSize="20dp"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tvNum2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvNum1"
-        tools:text="resultado" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Num 1"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Num 2"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <Button
-        android:id="@+id/btnCalcular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/calcular"
-        app:layout_constraintEnd_toEndOf="@+id/radiogroup"
-        app:layout_constraintStart_toStartOf="@+id/radiogroup"
-        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />
-
-    <Button
-        android:id="@+id/btn_pizzeria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pizzeria"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+            android:layout_margin="16dp"
+            android:layout_marginTop="0dp"
+            android:text="@string/pizzeria"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnEjemplo1"
+            app:layout_constraintVertical_bias="0.01" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
