--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_red">#700F0F</color>
+    <color name="light_red">#FF7681</color>
+    <color name="dark_blue">#002255</color>
+    <color name="light_blue">#03A9F4</color>
+
+
 </resources>
