--- a/app/src/main/res/layout/activity_lista_check_box.xml
+++ b/app/src/main/res/layout/activity_lista_check_box.xml
@@ -30,6 +30,17 @@
 
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/editTextTextMultiLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/button_pedido"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:textSize="22dp"
         android:layout_marginBottom="20dp"
